[package]
name = "minesweeperrust"
version = "0.1.0"
edition = "2021"
authors = ["Elian Gidoni <elianmdp@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
axum = "0.7.5"
tower = "0.4.13"
tokio-postgres = {version = "0.7.10", features = ["with-uuid-1", "with-serde_json-1", "with-time-0_3"]}
refinery = { version = "0.8", features = ["tokio-postgres"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"]}
uuid = {version = "1.0", features = ["v4"]}
postgres-types = { version = "0.2", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
metrics = { version = "0.22"}
metrics-exporter-prometheus = { version = "0.13"}

[dev-dependencies]
mockall = "0.12.1"
axum-test = "15.2.0"
serial_test = "*"
